--- a/app/pages/platinum_business_pro/index.njk
+++ b/app/pages/platinum_business_pro/index.njk
@@ -53,56 +53,52 @@ link: "#application-flow"
 {# Main content #}
 {% block content %}
 {% include 'partial/sidebar.njk' %}
-<main class="business_pro-page platinum-business-pro-page">
+<main class="business_pro-page">
   <section id="top" class="section-welcome platinum fadein">
-    <div class="row">
-      <div class="left">
-        <div class="containers">
-          <div class="banner-containers">
-            <div class="banner-left">
-              <div class="title-notice">
-                <h3 class="title-content">
-                  法人与信型ビジネスカード
-                  {# {% include 'component/icons/circle-question.njk' %} #}
-                </h3>
-              </div>
-              <h1 class="ttl-primary">
-                セゾンプラチナ・ビジネス プロ・<br> アメリカン・エキスプレス®・カード
-              </h1>
+    <div class="containers">
+      <div class="banner-containers">
+        <div class="banner-left">
+          <div class="title-notice">
+            <h3 class="title-content">
+              法人与信型ビジネスカード
+              {# {% include 'component/icons/circle-question.njk' %} #}
+            </h3>
+          </div>
+          <h1 class="ttl-primary">
+            セゾンプラチナ・ビジネス プロ・<br> アメリカン・エキスプレス®・カード
+          </h1>
 
-              <div class="card-contents">
-                <div class="card-img">
-                  <img src="/assets/img/credit_cards/saison-03.png" alt="Your Image" class="credit-card-img">
+          <div class="card-contents">
+            <div class="card-img">
+              <img src="/assets/img/credit_cards/saison-03.png" alt="Your Image" class="credit-card-img">
+            </div>
+            <div class="card-description">
+              <span>選べる機能で中小企業の経営をサポート</span>
+              <div class="card-description__options">
+                <div class="option">
+                  <span>1％<br />
+                    のキャッシュバック
+                  </span>
                 </div>
-                <div class="card-description">
-                  <span>選べる機能で中小企業の経営をサポート</span>
-                  <div class="card-description__options">
-                    <div class="option">
-                      <span>1％<br />
-                        のキャッシュバック
-                      </span>
-                    </div>
-                    OR
-                    <div class="option">
-                      <span>お支払いを<br />
-                        最長84日後・手数料0円
-                      </span>
-                    </div>
-                  </div>
+                OR
+                <div class="option">
+                  <span>お支払いを<br />
+                    最長84日後・手数料0円
+                  </span>
                 </div>
               </div>
-              <div class="banner-btn">
-                <a class="banner-btn__option blue_gradient_btn"
-                  href="https://www.saisoncard.co.jp/bizpro/kiyaku?app_card=1&pioneer_store_number=3166968&referral_store_number=0000001&referral_contact_number="
-                  target="_blank">お申込みはこちら</a>
-                <a class="banner-btn__option bondi_blue_outline_btn" href="/contact/">お問い合わせはこちら</a>
-              </div>
+
             </div>
           </div>
-        </div>
-      </div>
 
-      <div class="right pc-only">
+          <div class="banner-btn">
+            <a class="banner-btn__option blue_gradient_btn"
+              href="https://www.saisoncard.co.jp/bizpro/kiyaku?app_card=1&pioneer_store_number=3166968&referral_store_number=0000001&referral_contact_number="
+              target="_blank">お申込みはこちら</a>
+            <a class="banner-btn__option bondi_blue_outline_btn" href="/contact/">お問い合わせはこちら</a>
+          </div>
+
+        </div>
         <div class="banner-right pc-only">
           その挑戦に、
           <br /> 即戦力を
