change button saison invoice text

--- a/app/assets/scss/4-pages/_saison_invoice.scss
+++ b/app/assets/scss/4-pages/_saison_invoice.scss
@@ -191,6 +191,10 @@
               &:first-child {
                 color: $yellow-color;
                 background-color: $purple-color;
+
+                @media #{$sp} {
+                  background-color: #021054
+                }
               }
 
               @media #{$sp} {
