--- a/app/pages/contact/form_test.njk
+++ b/app/pages/contact/form_test.njk
@@ -767,7 +767,7 @@
             <div class="mktoFieldDescriptor mktoFormCol" style="margin-bottom: 10px;">
               <div class="mktoOffset" style="width: 10px;"></div>
               <div class="mktoFieldWrap mktoRequiredField"><label for="LastName" id="LblLastName"
-                  class="mktoLabel mktoHasWidth" style="width: 200px;">
+                  class="mktoLabel mktoHasWidth">
                   <span class="item">お名前</span>
                   <div><span class="required"></span></div>
                 </label>
