--- a/app/assets/scss/4-pages/_saison_welfare.scss
+++ b/app/assets/scss/4-pages/_saison_welfare.scss
@@ -710,11 +710,15 @@
               gap: 20px;
               padding: 30px;
               .card-image {
-                width: 100px;
-                height: 100px;
                 // border: 1px solid #bfbfbf;
                 border-radius: 50%;
                 margin: 0;
+
+                img{
+                  max-width: unset;
+                  height: 100px;
+                  width: 100px;
+                }
               }
               .card-description {
                 text-align: left;
