--- a/app/pages/saison_welfare/index.njk
+++ b/app/pages/saison_welfare/index.njk
@@ -306,7 +306,7 @@ link: "#application"
                 <div class="card">
                   <img src="/assets/img/saison_welfare/preferential_service_4.png" alt="preferential service 4">
                   <div class="preferential-service-description">
-                    <div class="title">カラオケで</div>
+                    <div class="title">東京ドームシティで</div>
                     <div class="muted"> 東京ドームシティ得10チケット 1冊最大6,000円相当が</span><span class="special">2,790円(税込)</span>
                     </div>
                   </div>
