--- a/app/assets/scss/4-pages/_catalog_list.scss
+++ b/app/assets/scss/4-pages/_catalog_list.scss
@@ -67,6 +67,9 @@
           transition: all 0.3s;
           .item-thumbnail {
             position: relative;
+            text-align: center;
+            margin-top: 20px;
+            transition: all 0.3s;
             .thumbnail--up {
               top: 40px;
               left: 20px;
@@ -97,12 +100,16 @@
               border: 1px solid #707070;
               position: absolute;
             }
+            img {
+              width: 70%;
+              height: 183px;
+            }
             &:hover {
               transform: scale(1.03);
             }
           }
           .item-checkbox {
-            padding: 244px 30px 0 30px;
+            padding: 30px 30px 0 30px;
             display: flex;
             gap: 20px;
             align-items: center;
