--- a/app/assets/scss/4-pages/_whitepaper.scss
+++ b/app/assets/scss/4-pages/_whitepaper.scss
@@ -73,6 +73,16 @@
       margin-top: 20px;
       .grid__card {
         width: 100%;
+        &:hover {
+          .grid__card--img {
+            transition: all .3s;
+            transform: scale(1.03);
+            img {
+              transform: none;
+            }
+          }
+        }
+
         .ttl-quaternary {
           text-align: left;
           font-size: 20px;
@@ -91,9 +101,9 @@
 
           .primary-img {
             position: absolute;
-            top: 0;
+            top: 30px;
             left: 0;
-            width: 237.5px;
+            width: 100%;
             height: 164.43px;
             z-index: 10;
           }
@@ -202,6 +212,16 @@
         padding: 30px 32px 30px 32px;
         box-shadow: 0 3px 20px $gray-color-4;
 
+        &:hover {
+          .grid__card--img {
+            transition: all .3s;
+            transform: scale(1.03);
+            img {
+              transform: none;
+            }
+          }
+        }
+
         .ttl-quaternary {
           text-align: left;
           font-size: 20px;
@@ -221,7 +241,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 237.5px;
+            width: 100%;
             height: 164.43px;
             z-index: 10;
           }
@@ -382,7 +402,7 @@
           white-space: pre-wrap;
           height: unset;
           @media #{$sp} {
-            white-space: nowrap
+            white-space: nowrap;
           }
         }
       }
