--- a/app/pages/catalog_list/index.njk
+++ b/app/pages/catalog_list/index.njk
@@ -33,10 +33,7 @@ link:"news_list"
       <div class="list-row">
         <div class="list-item">
           <div class="item-thumbnail">
-            <div class="thumbnail--up">
-              <div class="thumbnail-title">資料画像</div>
-            </div>
-            <div class="thumbnail--down"></div>
+            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <div class="item-checkbox">
             <div class="checkbox checked">
@@ -52,10 +49,7 @@ link:"news_list"
         </div>
         <div class="list-item">
           <div class="item-thumbnail">
-            <div class="thumbnail--up">
-              <div class="thumbnail-title">資料画像</div>
-            </div>
-            <div class="thumbnail--down"></div>
+            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <div class="item-checkbox">
             <div class="checkbox"></div>
@@ -69,10 +63,7 @@ link:"news_list"
         </div>
         <div class="list-item">
           <div class="item-thumbnail">
-            <div class="thumbnail--up">
-              <div class="thumbnail-title">資料画像</div>
-            </div>
-            <div class="thumbnail--down"></div>
+            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <div class="item-checkbox">
             <div class="checkbox"></div>
@@ -86,10 +77,7 @@ link:"news_list"
         </div>
         <div class="list-item">
           <div class="item-thumbnail">
-            <div class="thumbnail--up">
-              <div class="thumbnail-title">資料画像</div>
-            </div>
-            <div class="thumbnail--down"></div>
+            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <div class="item-checkbox">
             <div class="checkbox"></div>
@@ -103,10 +91,7 @@ link:"news_list"
         </div>
         <div class="list-item">
           <div class="item-thumbnail">
-            <div class="thumbnail--up">
-              <div class="thumbnail-title">資料画像</div>
-            </div>
-            <div class="thumbnail--down"></div>
+            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <div class="item-checkbox">
             <div class="checkbox"></div>
@@ -120,10 +105,7 @@ link:"news_list"
         </div>
         <div class="list-item">
           <div class="item-thumbnail">
-            <div class="thumbnail--up">
-              <div class="thumbnail-title">資料画像</div>
-            </div>
-            <div class="thumbnail--down"></div>
+            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <div class="item-checkbox">
             <div class="checkbox"></div>
@@ -137,10 +119,7 @@ link:"news_list"
         </div>
         <div class="list-item">
           <div class="item-thumbnail">
-            <div class="thumbnail--up">
-              <div class="thumbnail-title">資料画像</div>
-            </div>
-            <div class="thumbnail--down"></div>
+            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <div class="item-checkbox">
             <div class="checkbox"></div>
@@ -154,10 +133,7 @@ link:"news_list"
         </div>
         <div class="list-item">
           <div class="item-thumbnail">
-            <div class="thumbnail--up">
-              <div class="thumbnail-title">資料画像</div>
-            </div>
-            <div class="thumbnail--down"></div>
+            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <div class="item-checkbox">
             <div class="checkbox"></div>
@@ -171,10 +147,7 @@ link:"news_list"
         </div>
         <div class="list-item">
           <div class="item-thumbnail">
-            <div class="thumbnail--up">
-              <div class="thumbnail-title">資料画像</div>
-            </div>
-            <div class="thumbnail--down"></div>
+            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <div class="item-checkbox">
             <div class="checkbox">
