--- a/app/pages/service/index.njk
+++ b/app/pages/service/index.njk
@@ -33,7 +33,7 @@ link:"#"
   </section>
 
   <section class="section-secondary">
-    <div class="container-1200 refine-search">
+    <div class="container-1200 refine-search" id="dataFilter">
       <h2 class="ttl-secondary">絞り込み検索</h2>
 
       <div class="section-wrapper">
@@ -42,8 +42,8 @@ link:"#"
             規模別
           </div>
           <div class="right-content">
-            <a href="#" class="bondi_blue_outline_btn">個人事業主向け</a>
-            <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
+            <a class="bondi_blue_outline_btn">個人事業主向け</a>
+            <a class="bondi_blue_outline_btn">中小企業向け</a>
           </div>
         </div>
         <div class="card-section by-purpose">
@@ -51,11 +51,11 @@ link:"#"
             目的別
           </div>
           <div class="right-content">
-            <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
-            <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
-            <a href="#" class="bondi_green_outline_btn">資金繰りを改善したい</a>
-            <a href="#" class="bondi_green_outline_btn">業務効率化を図りたい</a>
-            <a href="#" class="bondi_green_outline_btn">福利厚生を充実したい</a>
+            <a class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
+            <a class="bondi_green_outline_btn">経費を削減したい</a>
+            <a class="bondi_green_outline_btn">資金繰りを改善したい</a>
+            <a class="bondi_green_outline_btn">業務効率化を図りたい</a>
+            <a class="bondi_green_outline_btn">福利厚生を充実したい</a>
           </div>
         </div>
       </div>
@@ -64,7 +64,7 @@ link:"#"
 
   <section class="section-card-list">
     <div class="container-1200">
-      <div class="section-wrapper">
+      <div class="section-wrapper" id="result">
         <div class="card-section cursor-pointer cursor-pointer">
           <img src="/assets/img/credit_cards/saison-03.png" alt="cast flow">
           <div class="content">
@@ -76,9 +76,9 @@ link:"#"
               中小企業の経営と事業成長を強力にサポートする一枚。
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
-              <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
-              <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
+              <a  class="bondi_blue_outline_btn">中小企業向け</a>
+              <a  class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
+              <a  class="bondi_green_outline_btn">経費を削減したい</a>
             </div>
           </div>
         </div>
@@ -94,9 +94,9 @@ link:"#"
               ビジネスにさらなる安心を与える一枚。
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
-              <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
-              <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
+              <a  class="bondi_blue_outline_btn">中小企業向け</a>
+              <a  class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
+              <a  class="bondi_green_outline_btn">経費を削減したい</a>
             </div>
           </div>
         </div>
@@ -112,9 +112,9 @@ link:"#"
               効率化とコスト削減を目指すならこの一枚。
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
-              <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
-              <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
+              <a  class="bondi_blue_outline_btn">中小企業向け</a>
+              <a  class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
+              <a  class="bondi_green_outline_btn">経費を削減したい</a>
             </div>
           </div>
         </div>
@@ -129,9 +129,9 @@ link:"#"
               個人与信型ビジネスカード
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">個人事業主向け</a>
-              <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
-              <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
+              <a  class="bondi_blue_outline_btn">個人事業主向け</a>
+              <a  class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
+              <a  class="bondi_green_outline_btn">経費を削減したい</a>
             </div>
           </div>
         </div>
@@ -146,9 +146,9 @@ link:"#"
               初めてのビジネスカードに。シンプルなこの一枚。
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
-              <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
-              <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
+              <a  class="bondi_blue_outline_btn">中小企業向け</a>
+              <a  class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
+              <a  class="bondi_green_outline_btn">経費を削減したい</a>
             </div>
           </div>
         </div>
@@ -163,9 +163,9 @@ link:"#"
               毎⽉の請求業務を最短15分に短縮！未⼊⾦対応をゼロに
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
-              <a href="#" class="bondi_green_outline_btn">資金繰りを改善したい</a>
-              <a href="#" class="bondi_green_outline_btn">業務効率化を図りたい</a>
+              <a  class="bondi_blue_outline_btn">中小企業向け</a>
+              <a  class="bondi_green_outline_btn">資金繰りを改善したい</a>
+              <a  class="bondi_green_outline_btn">業務効率化を図りたい</a>
             </div>
           </div>
         </div>
@@ -180,10 +180,10 @@ link:"#"
               すべての支払いを、最長60日後にカードで先延ばし!
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">個人事業主向け</a>
-              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
-              <a href="#" class="bondi_green_outline_btn">資金繰りを改善したい</a>
-              <a href="#" class="bondi_green_outline_btn">業務効率化を図りたい</a>
+              <a  class="bondi_blue_outline_btn">個人事業主向け</a>
+              <a  class="bondi_blue_outline_btn">中小企業向け</a>
+              <a  class="bondi_green_outline_btn">資金繰りを改善したい</a>
+              <a  class="bondi_green_outline_btn">業務効率化を図りたい</a>
             </div>
           </div>
         </div>
@@ -198,8 +198,8 @@ link:"#"
               従業員が喜ぶ優待メニューが充実!月額385円～/人で。!
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
-              <a href="#" class="bondi_green_outline_btn">福利厚生を充実させたい</a>
+              <a  class="bondi_blue_outline_btn">中小企業向け</a>
+              <a  class="bondi_green_outline_btn">福利厚生を充実させたい</a>
             </div>
           </div>
         </div>
@@ -214,8 +214,8 @@ link:"#"
               まとまった資金を低金利で!
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">個人事業主向け</a>
-              <a href="#" class="bondi_green_outline_btn">資金繰りを改善したい</a>
+              <a  class="bondi_blue_outline_btn">個人事業主向け</a>
+              <a  class="bondi_green_outline_btn">資金繰りを改善したい</a>
             </div>
           </div>
         </div>
@@ -230,8 +230,8 @@ link:"#"
               仮払い・立替払いを廃止！経費精算を自動化できる!
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
-              <a href="#" class="bondi_green_outline_btn">業務効率化を図りたい</a>
+              <a  class="bondi_blue_outline_btn">中小企業向け</a>
+              <a  class="bondi_green_outline_btn">業務効率化を図りたい</a>
             </div>
           </div>
         </div>
@@ -246,8 +246,8 @@ link:"#"
               出張手配の問題をまるごと解決!
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
-              <a href="#" class="bondi_green_outline_btn">業務効率化を図りたい</a>
+              <a  class="bondi_blue_outline_btn">中小企業向け</a>
+              <a  class="bondi_green_outline_btn">業務効率化を図りたい</a>
             </div>
           </div>
         </div>
