--- a/app/assets/scss/3-modules/_button.scss
+++ b/app/assets/scss/3-modules/_button.scss
@@ -786,11 +786,11 @@
     margin: 0;
   }
   &:hover {
-    background-color: $blue-color;
+    background-color: $blue-color !important;
     color: #ffffff;
     opacity: 1;
     &::before {
-      content: none!important ;
+      content: none !important ;
     }
     span {
       color: white;
@@ -819,12 +819,7 @@
   border: none;
   transition: 0.3s;
   background-size: 200% auto;
-  background-image: linear-gradient(
-    60deg,
-    #0497b5 0%,
-    #53d2b2 50%,
-    #0497b5 100%
-  );
+  background-image: linear-gradient(60deg, #0497b5 0%, #53d2b2 50%, #0497b5 100%);
 
   @media #{$sp} {
     font-size: 14px;
@@ -1050,7 +1045,8 @@
   }
 }
 
-.orange_more2, .black_more {
+.orange_more2,
+.black_more {
   display: block;
   max-width: 384px;
   color: #fff;
@@ -1061,7 +1057,7 @@
   box-shadow: none;
   position: relative;
   background-size: 100% auto;
-  background-image: linear-gradient(78deg, #F29B38 0%, #EE713F 100%);
+  background-image: linear-gradient(78deg, #f29b38 0%, #ee713f 100%);
   border-radius: 3px;
   margin: 0 auto;
   border: none;
@@ -1156,7 +1152,7 @@
 .black_more {
   max-width: 310px;
   background: $gradient-bg-2;
-  transition: all .3s;
+  transition: all 0.3s;
   &:hover {
     background: $gradient-bg-reverse-2;
   }
