--- a/app/assets/scss/4-pages/_whitepaper.scss
+++ b/app/assets/scss/4-pages/_whitepaper.scss
@@ -35,6 +35,12 @@
   }
 
   .section-primary {
+    margin-bottom: 100px;
+
+    @media #{$sp} {
+      margin-bottom: 0;
+    }
+
     .section__header {
       letter-spacing: 0px;
       font-size: 16px;
@@ -75,7 +81,7 @@
         width: 100%;
         &:hover {
           .grid__card--img {
-            transition: all .3s;
+            transition: all 0.3s;
             transform: scale(1.03);
             img {
               transform: none;
@@ -119,15 +125,22 @@
         }
 
         .grid__card--content {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          height: calc(100% - 128px);
+          gap: 20px;
           background: #f5f5f5 0% 0% no-repeat padding-box;
           padding: 90px 40px 40px 40px;
+
+          @media #{$sp} {
+            padding: 80px 15px;
+          }
 
           .custom-checkbox {
             position: relative;
             display: flex;
-            margin-right: 10px;
             gap: 7px;
-            margin-top: 7px;
             align-items: center;
             flex-wrap: nowrap;
 
@@ -174,8 +187,21 @@
           }
 
           .ttl-senary {
-            margin-top: 15px;
             font-size: 16px;
+          }
+
+          .quinary-btn {
+            text-align: center;
+            .blue_gradient_btn {
+              border: 2px solid #0497b5;
+              background: #0497b5 0 0 no-repeat padding-box !important;
+            }
+          }
+
+          .content__description {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
           }
         }
       }
@@ -214,7 +240,7 @@
 
         &:hover {
           .grid__card--img {
-            transition: all .3s;
+            transition: all 0.3s;
             transform: scale(1.03);
             img {
               transform: none;
